constructor and Dom javascript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
     "cSpell.words": [
+        "arry",
         "Cecilie",
+        "childul",
+        "elems",
+        "kumar",
+        "lastindex",
         "Maruti",
-        "Rehan"
+        "myfun",
+        "Ragib",
+        "Raza",
+        "Rehan",
+        "Rohan"
     ]
 }
